src/objects/TCodeIncentive__c.object
<CustomObject>
    <fields>
        <fullName>Continuous_13_Week_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if incentive is applicable for 13 week continuous subscription.</description>
        <inlineHelpText>Defines if incentive is applicable for 13 week continuous subscription.</inlineHelpText>
        <label>Continuous 13 Week Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuous_26_Week_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if incentive is applicable for 26 week continuous subscription.</description>
        <inlineHelpText>Defines if incentive is applicable for 26 week continuous subscription.</inlineHelpText>
        <label>Continuous 26 Week Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuous_52_Week_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if incentive is applicable for 52 week continuous subscription.</description>
        <inlineHelpText>Defines if incentive is applicable for 52 week continuous subscription.</inlineHelpText>
        <label>Continuous 52 Week Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Name__c</fullName>
        <formula>Incentive__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <referenceTo>Incentive__c</referenceTo>
        <relationshipName>TCode_Incentive_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>One_Off_13_Week_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if incentive is applicable for 13 week one off subscription.</description>
        <inlineHelpText>Defines if incentive is applicable for 13 week one off subscription.</inlineHelpText>
        <label>One Off 13 Week Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Off_26_Week_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if incentive is applicable for 26 week one off subscription.</description>
        <inlineHelpText>Defines if incentive is applicable for 26 week one off subscription.</inlineHelpText>
        <label>One Off 26 Week Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Off_52_Week_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if incentive is applicable for 52 week one off subscription.</description>
        <inlineHelpText>Defines if incentive is applicable for 52 week one off subscription.</inlineHelpText>
        <label>One Off 52 Week Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Digital</fullName>
                <default>true</default>
                    <label>Digital</label>
                </value>
                <value>
                <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used the VF page to select incentive due to apex:column</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Monthly</fullName>
                </value>
                <value>
                <fullName>Yearly</fullName>
                </value>
                <value>
                <fullName>Continuous</fullName>
                </value>
                <value>
                <fullName>26Weeks</fullName>
                </value>
                <value>
                <fullName>52Weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCodeName__c</fullName>
        <formula>TCode__r.Name</formula>
        <label>TCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCode__c</fullName>
        <label>TCode</label>
        <referenceTo>TCodeManagement__c</referenceTo>
        <relationshipName>TCode_Incentive_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TCode Incentive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TCodeName__c</columns>
        <columns>Incentive__c</columns>
        <columns>Product__c</columns>
        <columns>Subscription_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TJ-{0000}</displayFormat>
        <label>TCodeIncentive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCode Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Premium_applicability_flags_validation</fullName>
        <active>true</active>
        <description>None of the applicability flags should be ticked when product is Digital.</description>
        <errorConditionFormula>AND(ISPICKVAL(Product__c, &apos;Digital&apos;), OR( Continuous_13_Week_Applicable__c, Continuous_26_Week_Applicable__c, Continuous_52_Week_Applicable__c, One_Off_13_Week_Applicable__c, One_Off_26_Week_Applicable__c, One_Off_52_Week_Applicable__c))</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>None of the flags should be ticked when product is Digital.</errorMessage>
    </validationRules>
</CustomObject>